*Titre commit: Correction layout/Css page contact et home + test API IntersectionObserver *Changement(s) effectué(s): - ajout des "overflow-y:auto" et propriété css "flex-start" pour les pages contacts - test OK pour l'implémentation de l'API instersectionObserver

--- a/app_mobile_ERON/src/app/pages/home/home.page.scss
+++ b/app_mobile_ERON/src/app/pages/home/home.page.scss
@@ -7,8 +7,7 @@
 
 
 ion-content {
-
-  --overflow: hidden;
+  overflow-y:scroll;
 
 
   
